New-Upload-1755854042013/objects/Profile_Tab_Visibility__c.object
<CustomObject>
    <fields>
        <fullName>Object_Permission_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related Object Permission record</description>
        <label>Object Permission Lookup</label>
        <referenceTo>Profile_Object_Permission__c</referenceTo>
        <relationshipLabel>Tab Visibilities by Object Permission</relationshipLabel>
        <relationshipName>TabVisibilitiesByObjPerm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record (displays Profile Name)</description>
        <label>Profile Name Lookup</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Tab Visibilities by Name</relationshipLabel>
        <relationshipName>Tab_Visibilities_By_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record</description>
        <label>Profile Name</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Tab Visibilities</relationshipLabel>
        <relationshipName>Tab_Visibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tab_Name__c</fullName>
        <description>Name of the tab</description>
        <label>Tab Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <description>Visibility setting for the tab</description>
        <label>Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Profile Tab Visibility</label>
    <nameField>
        <displayFormat>PTV-{0000}</displayFormat>
        <label>Tab Visibility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Tab Visibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>